--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h6 {
   right: 0;
   left: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.8);
   transition: 0.3s;
   z-index: 999;
   margin-top: 0;
@@ -306,7 +306,7 @@ h6 {
   padding: 10px 0;
   overflow-y: auto;
   transition: 0.3s;
-  border: 2px solid rgba(141, 24, 24, 0.752);
+  border: 2px solid rgba(#6600fff0, 0.752);
 }
 
 .navbar-mobile li {
@@ -868,7 +868,7 @@ section .container {
   bottom: 0;
   padding: 15px;
   text-align: right;
-  font-size: 13px;
+  font-size: 14px;
   color: #ffffff;
   z-index: 999999;
 }
