--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,7 +407,7 @@ section .container {
 .about-me .content h3 {
   font-weight: 700;
   font-size: 24px;
-  color: #a0a0a0;
+  color: #6600ff;
 }
 
 .about-me .content ul {
@@ -444,7 +444,7 @@ section .container {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #fff;
+  color: #6600ff;
 }
 
 .resume .resume-item {
