--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,8 +267,8 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #fff;
-  font-size: 28px;
+  color: #6600ff;
+  font-size: 32px;
   cursor: pointer;
   display: none;
   line-height: 0;
@@ -419,7 +419,7 @@ section .container {
 @media (max-width: 992px) {
   .policy {
   text-align: left;
-  font-size: 12px;     
+  font-size: 11px;     
   }
 }
 
