--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,8 +267,8 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #b584ff;
-  font-size: 45px;
+  color: #ffffff;
+  font-size: 40px;
   cursor: pointer;
   display: none;
   line-height: 0;
@@ -419,7 +419,7 @@ section .container {
 @media (max-width: 992px) {
   .policy {
   text-align: left;
-  font-size: 10px;     
+  font-size: 10.5px;     
   }
 }
 
